results/SVCOMP/conversational/log-return2-2024_03_15_05_37_00.txt
import java.util.Random;

class return2 {
  //@ ensures \result == (v1 == v2);
  public static boolean f() {
    int v1 = new Random().nextInt();
    int v2 = new Random().nextInt();
    return v1 == v2;
  }
}
/home/max/Documents/JMLGPT/tmp/return2.java:4: error: cannot find symbol
  //@ ensures \result == (v1 == v2);
                          ^
  symbol:   variable v1
  location: class return2
/home/max/Documents/JMLGPT/tmp/return2.java:4: error: cannot find symbol
  //@ ensures \result == (v1 == v2);
                                ^
  symbol:   variable v2
  location: class return2
2 errors

import java.util.Random;

class return2 {
  //@ ensures \result == (\result == \result);
  public static boolean f() {
    int v1 = new Random().nextInt();
    int v2 = new Random().nextInt();
    return v1 == v2;
  }
}
/home/max/Documents/JMLGPT/tmp/return2.java:8: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/return2.java:4:) in method f
    return v1 == v2;
    ^
/home/max/Documents/JMLGPT/tmp/return2.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/return2.java:8:
  //@ ensures \result == (\result == \result);
      ^
2 verification failures

import java.util.Random;

class return2 {
  //@ ensures \result == (v1 == v2);
  public static boolean f() {
    int v1 = new Random().nextInt();
    int v2 = new Random().nextInt();
    return v1 == v2;
  }
}
/home/max/Documents/JMLGPT/tmp/return2.java:4: error: cannot find symbol
  //@ ensures \result == (v1 == v2);
                          ^
  symbol:   variable v1
  location: class return2
/home/max/Documents/JMLGPT/tmp/return2.java:4: error: cannot find symbol
  //@ ensures \result == (v1 == v2);
                                ^
  symbol:   variable v2
  location: class return2
2 errors

import java.util.Random;

class return2 {
  //@ ensures \result == (\result == \result);
  public static boolean f() {
    int v1 = new Random().nextInt();
    int v2 = new Random().nextInt();
    return v1 == v2;
  }
}
/home/max/Documents/JMLGPT/tmp/return2.java:8: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/return2.java:4:) in method f
    return v1 == v2;
    ^
/home/max/Documents/JMLGPT/tmp/return2.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/return2.java:8:
  //@ ensures \result == (\result == \result);
      ^
2 verification failures

import java.util.Random;

class return2 {
  //@ ensures \result == (v1 == v2);
  public static boolean f() {
    int v1 = new Random().nextInt();
    int v2 = new Random().nextInt();
    return v1 == v2;
  }
}
/home/max/Documents/JMLGPT/tmp/return2.java:4: error: cannot find symbol
  //@ ensures \result == (v1 == v2);
                          ^
  symbol:   variable v1
  location: class return2
/home/max/Documents/JMLGPT/tmp/return2.java:4: error: cannot find symbol
  //@ ensures \result == (v1 == v2);
                                ^
  symbol:   variable v2
  location: class return2
2 errors

import java.util.Random;

class return2 {
  //@ ensures \result == (\result == \result);
  public static boolean f() {
    int v1 = new Random().nextInt();
    int v2 = new Random().nextInt();
    return v1 == v2;
  }
}
/home/max/Documents/JMLGPT/tmp/return2.java:8: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/return2.java:4:) in method f
    return v1 == v2;
    ^
/home/max/Documents/JMLGPT/tmp/return2.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/return2.java:8:
  //@ ensures \result == (\result == \result);
      ^
2 verification failures

import java.util.Random;

class return2 {
  //@ ensures \result == (v1 == v2);
  public static boolean f() {
    int v1 = new Random().nextInt();
    int v2 = new Random().nextInt();
    return v1 == v2;
  }
}
/home/max/Documents/JMLGPT/tmp/return2.java:4: error: cannot find symbol
  //@ ensures \result == (v1 == v2);
                          ^
  symbol:   variable v1
  location: class return2
/home/max/Documents/JMLGPT/tmp/return2.java:4: error: cannot find symbol
  //@ ensures \result == (v1 == v2);
                                ^
  symbol:   variable v2
  location: class return2
2 errors

import java.util.Random;

class return2 {
  //@ ensures \result == (\result == \result);
  public static boolean f() {
    int v1 = new Random().nextInt();
    int v2 = new Random().nextInt();
    return v1 == v2;
  }
}
/home/max/Documents/JMLGPT/tmp/return2.java:8: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/return2.java:4:) in method f
    return v1 == v2;
    ^
/home/max/Documents/JMLGPT/tmp/return2.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/return2.java:8:
  //@ ensures \result == (\result == \result);
      ^
2 verification failures

import java.util.Random;

class return2 {
  //@ ensures \result == (v1 == v2);
  public static boolean f() {
    int v1 = new Random().nextInt();
    int v2 = new Random().nextInt();
    return v1 == v2;
  }
}
/home/max/Documents/JMLGPT/tmp/return2.java:4: error: cannot find symbol
  //@ ensures \result == (v1 == v2);
                          ^
  symbol:   variable v1
  location: class return2
/home/max/Documents/JMLGPT/tmp/return2.java:4: error: cannot find symbol
  //@ ensures \result == (v1 == v2);
                                ^
  symbol:   variable v2
  location: class return2
2 errors

import java.util.Random;

class return2 {
  //@ ensures \result == (\result == \result);
  public static boolean f() {
    int v1 = new Random().nextInt();
    int v2 = new Random().nextInt();
    return v1 == v2;
  }
}
/home/max/Documents/JMLGPT/tmp/return2.java:8: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/return2.java:4:) in method f
    return v1 == v2;
    ^
/home/max/Documents/JMLGPT/tmp/return2.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/return2.java:8:
  //@ ensures \result == (\result == \result);
      ^
2 verification failures

